align-items cart fix (#265)

--- a/src/pages/ShoppingCartPage/components/ProductItem/ProductItem.scss
+++ b/src/pages/ShoppingCartPage/components/ProductItem/ProductItem.scss
@@ -12,7 +12,6 @@
     
     &__info {
         display: flex;
-        align-items: center;
         gap: 16px;
     }
     &__right {
